--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -6,7 +6,8 @@
     },
     {
       "route": "/login",
-      "rewrite": "/.auth/login/aad"
+      "rewrite": "/.auth/login/aad",
+      "allowedRoles": ["anonymous"]
     },
     {
      "route": "/logout",
