--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -12,6 +12,18 @@
     {
      "route": "/logout",
      "redirect": "/.auth/logout"
+    },
+    {
+      "route": "/.auth/login/twitter",
+      "statusCode": 404
+    },
+    {
+      "route": "/.auth/login/github",
+      "statusCode": 404
+    },
+    {
+      "route": "/.auth/login/aad",
+      "allowedRoles": ["anonymous"]
     }
   ],
   "responseOverrides": {
